--- a/site/Editors/style.css
+++ b/site/Editors/style.css
@@ -347,7 +347,7 @@ footer .follow {
 
 footer .follow i {
     color: black;
-    padding-right: 4px;
+    padding-right: 18px;
     cursor: pointer;
 }
 
@@ -606,8 +606,8 @@ footer .copyright {
 #form-details form button{
     background-color: #7d57f9;
     color: white;
-    width: 80px;
-    height: 40px;
+    width: 100px;
+    height: 50px;
     margin-bottom: 15px;
 }
 
@@ -775,10 +775,10 @@ i {
 
 /*login*/
 
-.login-page{
+/*.login-page{
     background-image: url(../assets/background-ceu-estrelado.png);
-    width: 100vw;
-    height: 100vw;
+    width: 1300px;
+    height: 600px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -799,7 +799,7 @@ i {
     box-shadow: 0 0 20px 0 darkgray;
 }
 
-form {
+.form-login {
     position: absolute;
     margin-top: 80px;
     transition: .5s;
@@ -827,11 +827,11 @@ form {
     width: 108px;
     height: 100%;
     background: #7d57f9; /*linear-gradient(to right, #5956e9, #a963f8)*/
-    border-radius: 30px;
+   /* border-radius: 30px;
     transition: .3s;
 }
 
-input[type="text"], input[type="senha"] {
+input.input-login[type="text"], input[type="senha"] {
     border: none;
     margin-top: 40px;
     border-radius: 60px;
@@ -874,6 +874,179 @@ i.lg{
 
 .lg2 {
     top: 190px;
+}*/
+
+/* Login 2 */
+
+main {
+    /*background-image: url("../assets/background-ceu-estrelado.png");*/
+    height: 85vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.login-container {
+    position: relative;
+    height: 480px;
+    width: 768px;
+    border-radius: 12px;
+    box-shadow: 0 5px 20px rgb(185, 185, 185);
+    overflow: hidden;
+
+}
+
+.form-container {
+    height: 100%;
+    width: 100%;
+    display: flex;
+
+}
+
+.form {
+    height: 100%;
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    background-color: white;
+    padding: 55px 0;
+    transition: 1s;
+}
+
+
+.form-register {
+    transform: translateX(-100%);
+    z-index: -1;
+    opacity: 0;
+}
+
+.login-container.move .form-login {
+    transform: translateX(100%);
+    z-index: -1;
+    opacity: 0;
+}
+
+.login-container.move .form-register {
+    transform: translateX(0%);
+    z-index: 1;
+    opacity: 1;
+}
+
+.form-title {
+    font-size: 3rem;
+    color: #000;
+}
+
+.form-title-light {
+    color: white;
+}
+
+
+.form-social {
+    display: flex;
+    gap: 24px;
+}
+
+.social-icon {  
+    height: 40px;
+    width: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    font-size: 1.2rem;
+    background-color: #F3F3FE;
+    box-shadow: 0 4px 4px #0004;
+    transition: .5s;
+}
+
+.social-icon:hover {
+    background-color: #cec3f7;
+    transform: translateY(-15%);
+}
+
+
+a {
+    text-decoration: none;
+}
+
+.form-input-container {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.form-input {
+    width: 300px;
+    height: 40px;
+    padding: 10px 20px;
+    border-style: none;
+    background-color: #E3E6F3;
+}
+
+.form-button {
+    width: 140px;
+    height: 40px;
+    border-style: none;
+    border-radius: 50px;
+    border: 2px solid #7d57f9;
+    background-color: transparent;
+    font-size: 1rem;
+    font-weight: 800;
+    color: #7d57f9;
+    cursor: pointer;
+    transition: .5s;
+}
+
+.form-button-light {
+    color: white;
+    border: 2px solid white;
+}
+
+.form-button:hover {
+    background-color: #cec3f7;
+    color: #7d57f9;
+}
+
+.overlay-container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 50%;
+    height: 100%;
+    transform: translateX(100%);
+    text-align: center;
+    z-index: 10;
+    transition: 1s;
+   
+}
+
+.overlay {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 65px;
+    background-color: #7d57f9;
+    transition: 1s;
+}
+
+.login-container.move .overlay:nth-child(2) {
+    z-index: -1;
+    opacity: 0;
+}
+
+.form-text-light {
+    color: white;
+}
+
+.login-container.move .overlay-container {
+    transform: translateX(0%);
 }
 
 
