--- a/site/Editors/style.css
+++ b/site/Editors/style.css
@@ -1049,6 +1049,98 @@ a {
     transform: translateX(0%);
 }
 
+/* Profile */
+
+
+.pb-5, .pt-5, .mb-5, .mt-5, .my-5 {
+    margin-top: 0rem!important;
+    margin-bottom: 3rem!important;
+    padding-top: 3rem!important;
+    padding-bottom: 3rem!important;
+    background-image: url("../assets/background-ceu-estrelado.png");
+}
+
+
+.shadow {
+	box-shadow: 0 2px 10px #333;
+}
+
+.profile-tab-nav {
+	min-width: 250px;
+}
+
+.tab-content {
+	flex: 1;
+}
+
+.form-group {
+	margin-bottom: 1.5rem;
+}
+
+.form-control {
+    display: block;
+    width: 100%;
+    height: calc(1.5em + 0.75rem + 2px);
+    padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #495057;
+    background-color: whitesmoke;
+    background-clip: padding-box;
+    border: 1px solid #7d57f9;
+    border-radius: 0.25rem;
+    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
+
+.nav-pills a.nav-link {
+	padding: 15px 20px;
+	border-bottom: 1px solid #ddd;
+	border-radius: 0;
+	color: #333;
+}
+.nav-pills a.nav-link i {
+	width: 20px;
+}
+
+.nav-pills .nav-link.active {
+    color: #fff;
+    background-color: #cec3f7;
+}
+
+.img-circle img {
+	height: 100px;
+	width: 100px;
+	border-radius: 100%;
+	border: 5px solid #fff;
+}
+
+.profile-button-light {
+    font-size: 14px;
+    font-weight: 600;
+    padding: 9px 9px;
+    color: white;
+    background-color: #cec3f7;
+    border-radius: 4px;
+    cursor: pointer;
+    border: none;
+    outline: none;
+    transition: 0.2s;
+}
+
+.profile-button {
+    font-size: 14px;
+    font-weight: 600;
+    padding: 9px 9px;
+    color: white;
+    background-color: #7d57f9;
+    border-radius: 4px;
+    cursor: pointer;
+    border: none;
+    outline: none;
+    transition: 0.2s;
+}
+
 
 
 
